# mlx-fish-speech

./: .gitignore  README.md  README.zh.md  pyproject.toml
examples/: s1_mini_tts.py  s2_pro_tts.py  s2pro_podcast_crow.py
mlx_fish_speech/: __init__.py  cli.py  content_sequence.py  conversation.py  convert.py  generate.py  repo_paths.py  voice_clone_generate.py
mlx_fish_speech/models/: __init__.py  dac.py  dac_weights.py  post_module.py  text2semantic.py
mlx_fish_speech/utils/: __init__.py  audio.py  mlx_rvq.py  tokenizer.py
weights/: fake.npy
